hphp/hack/test/typecheck/reified_generics/valid_targ_this.php
<?hh // partial

class C<reify T> {}

class X {
  const type X1 = C<this>;
}
